[tool.poetry]
name = "dmacli"
version = "0.1.0"
description = ""
authors = ["Saitama- <wishiweresaitama@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.8"
pytest = "^8.3.4"
pydantic = "^2.10.5"

[tool.poetry.scripts]
dmacli = "dmacli.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
